# GuidedFilter

./: .gitignore  CMakeLists.txt  CNAME  Gemfile  LICENSE  README.md  _config.yml  guidedfilter.sublime-project  index.html
1.0/: algorithms_8cpp.html  algorithms_8cpp__incl.map  algorithms_8cpp__incl.md5  algorithms_8hpp.html  algorithms_8hpp__incl.md5  algorithms_8hpp_source.html  annotated.html  boxFilter__kernels_8cl.html  classCLEnvGL-members.html  classCLEnvGL.html  classCLEnvGL__coll__graph.map  classGFilterPC-members.html  classGFilterPC.html  classGFilterRGB-members.html  classGFilterRGB.html  classMutex-members.html  classMutex.html  classMutex_1_1ScopedLock-members.html  classMutex_1_1ScopedLock.html  classMyFreenectDevice-members.html  classMyFreenectDevice.html  classMyFreenectDevice__inherit__graph.md5  classcl__algo_1_1BoxFilter-members.html  classcl__algo_1_1BoxFilter.html  classcl__algo_1_1BoxFilterSAT-members.html  classcl__algo_1_1BoxFilterSAT.html  classcl__algo_1_1CombineRGB.html  classcl__algo_1_1CombineRGB_3_01CombineRGBConfig_1_1FLOAT__FLOAT_01_4-members.html  classcl__algo_1_1CombineRGB_3_01CombineRGBConfig_1_1FLOAT__FLOAT_01_4.html  classcl__algo_1_1CombineRGB_3_01CombineRGBConfig_1_1FLOAT__UCHAR_01_4-members.html  classcl__algo_1_1CombineRGB_3_01CombineRGBConfig_1_1FLOAT__UCHAR_01_4.html  classcl__algo_1_1Depth.html  classcl__algo_1_1DepthTo3D-members.html  classcl__algo_1_1DepthTo3D.html  classcl__algo_1_1Depth_3_01DepthConfig_1_1USHORT__FLOAT_01_4-members.html  classcl__algo_1_1Depth_3_01DepthConfig_1_1USHORT__FLOAT_01_4.html  classcl__algo_1_1GuidedFilter.html  classcl__algo_1_1GuidedFilter_3_01GuidedFilterConfig_1_1I__EQ__P_01_4-members.html  classcl__algo_1_1GuidedFilter_3_01GuidedFilterConfig_1_1I__EQ__P_01_4.html  classcl__algo_1_1GuidedFilter_3_01GuidedFilterConfig_1_1I__NEQ__P_01_4-members.html  (+154 more)
1.1/: algorithms_8cpp.html  algorithms_8hpp.html  (+173 more)
1.1.1/: algorithms_8cpp.html  algorithms_8cpp__incl.md5  algorithms_8hpp.html  algorithms_8hpp__dep__incl.md5  algorithms_8hpp__incl.map  algorithms_8hpp_source.html  annotated.html  boxFilter__kernels_8cl.html  classCLEnvGL-members.html  classCLEnvGL.html  classGFilterPC-members.html  classGFilterPC.html  classGFilterRGB-members.html  classGFilterRGB.html  classMutex-members.html  classMutex.html  classMutex_1_1ScopedLock-members.html  classMutex_1_1ScopedLock.html  classMyFreenectDevice-members.html  classMyFreenectDevice.html  classcl__algo_1_1GF_1_1BoxFilter-members.html  classcl__algo_1_1GF_1_1BoxFilter.html  classcl__algo_1_1GF_1_1BoxFilterSAT-members.html  classcl__algo_1_1GF_1_1BoxFilterSAT.html  classcl__algo_1_1GF_1_1CombineRGB.html  classcl__algo_1_1GF_1_1CombineRGB_3_01CombineRGBConfig_1_1FLOAT__FLOAT_01_4-members.html  classcl__algo_1_1GF_1_1CombineRGB_3_01CombineRGBConfig_1_1FLOAT__FLOAT_01_4.html  classcl__algo_1_1GF_1_1CombineRGB_3_01CombineRGBConfig_1_1FLOAT__UCHAR_01_4-members.html  classcl__algo_1_1GF_1_1CombineRGB_3_01CombineRGBConfig_1_1FLOAT__UCHAR_01_4.html  classcl__algo_1_1GF_1_1Depth.html  classcl__algo_1_1GF_1_1DepthTo3D-members.html  classcl__algo_1_1GF_1_1DepthTo3D.html  classcl__algo_1_1GF_1_1Depth_3_01DepthConfig_1_1USHORT__FLOAT_01_4-members.html  classcl__algo_1_1GF_1_1Depth_3_01DepthConfig_1_1USHORT__FLOAT_01_4.html  classcl__algo_1_1GF_1_1GuidedFilter.html  classcl__algo_1_1GF_1_1GuidedFilter_3_01GuidedFilterConfig_1_1I__EQ__P_01_4-members.html  classcl__algo_1_1GF_1_1GuidedFilter_3_01GuidedFilterConfig_1_1I__EQ__P_01_4.html  classcl__algo_1_1GF_1_1GuidedFilter_3_01GuidedFilterConfig_1_1I__NEQ__P_01_4-members.html  classcl__algo_1_1GF_1_1GuidedFilter_3_01GuidedFilterConfig_1_1I__NEQ__P_01_4.html  classcl__algo_1_1GF_1_1Kinect_1_1GuidedFilterDepth-members.html  (+159 more)
1.1.2/: algorithms_8cpp.html  algorithms_8hpp.html  algorithms_8hpp__dep__incl.map  algorithms_8hpp_source.html  annotated.html  boxFilter__kernels_8cl.html  classCLEnvGL-members.html  classCLEnvGL.html  classCLEnvGL__inherit__graph.md5  classGFilterPC-members.html  classGFilterPC.html  classGFilterRGB-members.html  classGFilterRGB.html  classMutex-members.html  classMutex.html  classMutex_1_1ScopedLock-members.html  classMutex_1_1ScopedLock.html  classMyFreenectDevice-members.html  classMyFreenectDevice.html  classcl__algo_1_1GF_1_1BoxFilter-members.html  classcl__algo_1_1GF_1_1BoxFilter.html  classcl__algo_1_1GF_1_1BoxFilterSAT-members.html  classcl__algo_1_1GF_1_1BoxFilterSAT.html  classcl__algo_1_1GF_1_1CombineRGB.html  classcl__algo_1_1GF_1_1CombineRGB_3_01CombineRGBConfig_1_1FLOAT__FLOAT_01_4-members.html  classcl__algo_1_1GF_1_1CombineRGB_3_01CombineRGBConfig_1_1FLOAT__FLOAT_01_4.html  classcl__algo_1_1GF_1_1CombineRGB_3_01CombineRGBConfig_1_1FLOAT__UCHAR_01_4-members.html  classcl__algo_1_1GF_1_1CombineRGB_3_01CombineRGBConfig_1_1FLOAT__UCHAR_01_4.html  classcl__algo_1_1GF_1_1Depth.html  classcl__algo_1_1GF_1_1DepthTo3D-members.html  classcl__algo_1_1GF_1_1DepthTo3D.html  classcl__algo_1_1GF_1_1Depth_3_01DepthConfig_1_1USHORT__FLOAT_01_4-members.html  classcl__algo_1_1GF_1_1Depth_3_01DepthConfig_1_1USHORT__FLOAT_01_4.html  classcl__algo_1_1GF_1_1GuidedFilter.html  classcl__algo_1_1GF_1_1GuidedFilter_3_01GuidedFilterConfig_1_1I__EQ__P_01_4-members.html  classcl__algo_1_1GF_1_1GuidedFilter_3_01GuidedFilterConfig_1_1I__EQ__P_01_4.html  classcl__algo_1_1GF_1_1GuidedFilter_3_01GuidedFilterConfig_1_1I__NEQ__P_01_4-members.html  classcl__algo_1_1GF_1_1GuidedFilter_3_01GuidedFilterConfig_1_1I__NEQ__P_01_4.html  (+143 more)
docs/: CMakeLists.txt  Doxyfile.in  header.html  mainpage.dox
examples/: CMakeLists.txt  guidedFilter_image.cpp  guidedFilter_kinect_point_cloud.cpp  guidedFilter_kinect_rgb.cpp
kernels/: CMakeLists.txt  boxFilter_kernels.cl  examples_kernels.cl  guidedFilter_kernels.cl  imageSupport_kernels.cl  math_kernels.cl  prefixSum_kernels.cl  scan_kernels.cl  transpose_kernels.cl
src/: CMakeLists.txt
src/GuidedFilter/: algorithms.cpp  math.cpp
src/GuidedFilter/tests/: helperFuncs.cpp  helper_funcs.cpp
tests/: CMakeLists.txt  testsBoxFilter.cpp  testsGuidedFilter.cpp  testsImageSupport.cpp  testsMath.cpp
(+380 files in other folders)
